Ticket #11550 (closed defect: fixed)

Opened 9 months ago

Last modified 8 months ago

wxAUI doesn't work on OSX, problem with wxHIDKeyboard

Reported by: Mdx4 Owned by: csomor
Priority: normal Milestone:
Component: wxOSX-Cocoa Version: 2.9-svn
Keywords: wxAUI wxHIDKeyboard Cc: marco.serantoni@…
Blocked By: Patch: yes
Blocking:

Description

The aui sample hangs trying to redock a panel.
I've tracked down and an hang on wxHIDKeyboard::DoBuildCookies was evidentiated.
Debugging step by step i seen that at hid.cpp:504 the variable used in the for loop back down to 0.
nUsage was defined as INT but the call was for a LONG type.

Index: src/osx/core/hid.cpp
===================================================================
--- src/osx/core/hid.cpp (revision 62859)
+++ src/osx/core/hid.cpp (working copy)
@@ -504,7 +504,7 @@

CFArrayGetValueAtIndex(Array, i),
CFSTR(kIOHIDElementUsageKey)

),

- kCFNumberLongType,
+ kCFNumberIntType,

&nUsage);

Change History

Changed 9 months ago by Mdx4

  • cc marco.serantoni@… added

Changed 9 months ago by Infinity77

  • status changed from new to infoneeded_new

Hi,

please specify which "AUI" you are talking about. Is the wxAUI wxWidgets version or the wx.lib.agw.aui wxPython one? In any case, the component should either be "wxAUI" or "AGW", not "wxOSX-Cocoa".

Andrea.

Changed 9 months ago by Mdx4

  • keywords wxAUI added; AUI removed
  • status changed from infoneeded_new to new
  • summary changed from AUI doesn't work on OSX, problem with wxHIDKeyboard to wxAUI doesn't work on OSX, problem with wxHIDKeyboard

Hi,

Andrea i mean wxAUI the wxWidgets one.
Sorry for not being precise on the definition of the issue, i'm correcting it now

Marco

Changed 8 months ago by csomor

  • owner set to csomor
  • status changed from new to accepted

Changed 8 months ago by SC

  • status changed from accepted to closed
  • resolution set to fixed

(In [63180]) fixing type for 64 bit, closes #11550

Note: See TracTickets for help on using tickets.